# ComputationalPhysics

./: .gitignore  LICENSE  README.md
0.Chapters/ch2.1/ch2.1.1/: CMakeLists.txt
0.Chapters/ch2.1/ch2.1.1/miscFiles/: Circle.in  Circle.out  generate.sh
0.MySolutions/CH2_Kinematics/: README.md
0.MySolutions/CH2_Kinematics/src/: Circle.cpp  Circle.h  Circle1.in  Kinematics.cpp  Kinematics.h  Main.cpp  SimplePendulum.cpp  SimplePendulum.h
LinkedInPrograms/2.MontyHallProblem/: Makefile  modulesLoad.sh
LinkedInPrograms/2.MontyHallProblem/References/: 0.JobSubmissionRef.txt  ComputerArchRef.txt  GccRef.txt  LinuxHPCRef.txt  ScriptingBashCMake-Ref.txt
LinkedInPrograms/2.MontyHallProblem/References/CMakeProjectRef/: CMakeLists1.txt
LinkedInPrograms/2.MontyHallProblem/References/ContainerizationRef/hpccmRef/: SingularityNotes.txt
LinkedInPrograms/2.MontyHallProblem/References/DebuggingRef/: DebuggingReferences.txt
LinkedInPrograms/2.MontyHallProblem/References/GnuplotRef/: data3.txt  gnuplotRef.txt
LinkedInPrograms/2.MontyHallProblem/References/MPIRef/: MPIRef.txt
LinkedInPrograms/2.MontyHallProblem/References/VimRef/: vimCheatCodes.txt  vimrc_basic
LinkedInPrograms/2.MontyHallProblem/src/: Main.cpp
MyNotes/: ErrorAnalysis.txt
References/CMakeProjectRef/: CMakeLists.txt
References/ContainerizationRef/hpccmRef/: GenRecipeSample.py
References/GnuplotRef/: data.txt
References/VimRef/: vimrcfile
TipsOnPhysics/: 0.NotesPhysics.txt
src/ch2.1/ch2.1.1/: Circle.out  main.cpp
